2001-09-30  Roland McGrath  <roland@frob.com>

	* kern/bootstrap.c (bootstrap_create): Ignore trailing spaces when
	checking boot module string for containing none.

2001-09-18  Marcus Brinkmann  <marcus@gnu.org>

	* linux/dev/glue/misc.c: Do not include <linux/types.h> and
	<linux/string.h>.
	Remove global variable ___strtok.
	Remove implementation of strspn, strpbrk, strtok and strstr.
	* Makefile.in: Add strpbrk and strtok.

2001-08-24  Roland McGrath  <roland@frob.com>

	* kern/bootstrap.c (bootstrap_create): Make setting of boot-args and
	root-device no longer conditional on [! OSKIT_MACH].
	(bootstrap_create) [! OSKIT_MACH]: Parse FOO=BAR words out of the
	multiboot command line and turn those into boot script variables.

	* Makefile.in (clib-routines): Add strsep.
	* kern/strings.h (strsep, strchr): Declare them.

2001-08-23  Roland McGrath  <roland@frob.com>

	* kern/bootstrap.c (bootstrap_create, user_bootstrap,
	boot_script_exec_cmd, boot_script_task_resume): Add printfs at
	various stages of startup.

2001-08-21  Roland McGrath  <roland@frob.com>

	* i386/i386at/model_dep.c (use_all_mem): Turn variable into macro.
	(init_alloc_aligned): Make this function static.
	Initially skip memory < 16MB and then wrap around to get it last.

2001-08-20  Roland McGrath  <roland@frob.com>

	Support "boot script" functionality in multiboot module strings.
	* kern/bootstrap.c: Rewrite merged from oskit-branch.
	* kern/boot_script.c, kern/boot_script.h: New files,
	copied from boot/ directory in Hurd sources.
	* Makefile.in (kern-cfiles): Add boot_script.c here.
	(kern-files): Add boot_script.h here.
	* NEWS: Mention the new feature.

2001-08-18  Roland McGrath  <roland@frob.com>

	* i386/i386at/model_dep.c (boot_info): Define a struct, not a pointer.
	(c_boot_entry): Copy the contents into it rather than setting the ptr.
	(c_boot_entry, init_alloc_aligned, pmap_valid_page, mem_size_init):
	Update uses.
	(init_alloc_aligned): Don't need to skip the boot_info memory.